src/objects/Outstanding_Payments__c.object
<CustomObject>
    <description>Custom Object to store any outstanding payments when termination is initiated.</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Outstanding Payments</relationshipLabel>
        <relationshipName>Outstanding_Payments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Charge_Code__c</fullName>
        <label>Charge Code</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Charge_From__c</fullName>
        <label>Charge From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Charge_To__c</fullName>
        <label>Charge To</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Outstanding Payments</relationshipLabel>
        <relationshipName>Outstanding_Payments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Outstanding Payments</relationshipLabel>
        <relationshipName>Outstanding_Payments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Outstanding_Lease_Amount__c</fullName>
        <label>Outstanding LeaseAmount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>VAT_Amount__c</fullName>
        <label>VAT Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Outstanding Payment</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>OP-{00000}</displayFormat>
        <label>Outstanding Payments Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Outstanding Payments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>